# praca-magisterska

./: .gitignore  README.md
.github/workflows/: build_pdf.yml  workload-app.yml
experiments/load-testing/k6/: README.md  flood.js  runner.js  test.js
experiments/operator/: README.md  pyproject.toml
experiments/operator/src/: crd.yml  monitor.py  monitor2.py  obj.yml  obj2.yml  scaling-controller.py
experiments/workload-app/: .gitignore  Dockerfile  README.md  app.py  logging.yaml  pyproject.toml
experiments/workload-app/tests/: test_app.py
infra/workload-app/: dp.yml  hpa.yml  ingress.yml  scaled-object.yml  serviceMonitor.yml  svc.yml  vpa.yml
latex/: .gitignore  .latexmkrc  bibliografia.bib  glossary.tex  main.tex
latex/config/: listing.tex
latex/eiti/: eiti-thesis.cls
latex/tex/1-wstep/: 1-wstep.tex
latex/tex/2-podstawy-teoretyczne/: 2-podstawy-teoretyczne.tex
latex/tex/3-metodologia-badawcza/: 3-metodologia-badawcza.tex  3.1-sformulowanie-problemu-badawczego.tex  3.2-srodowisko-testowe.tex  3.3-projektowanie-eksperymentow.tex  3.4-metody-analizy-danych.tex
latex/tex/4-implementacja-kubernetes/: 4-implementacja-kubernetes.tex
latex/tex/4-implementacja-skalowanie/: 4-implementacja-kubernetes.tex  4.1-konfiguracja-i-wdrozenie-mechanizmow-skalowania.tex  listing.tex
latex/tex/5-implementacja-mapek/: 5-implementacja-mapek.tex
latex/tex/6-analiza/: 6-analiza.tex
latex/tex/7-podsumowanie/: 7-podsumowanie.tex
metallb/: deploy.sh
operator/: autoscaler-operator.py  autoscalerpolicy-crd.yaml  policy-sample.yaml
sys-prep/: sys-prep.yml
(+5 files in other folders)
