[project]
name = "operator"
version = "0.1.0"
description = ""
authors = [
    {name = "Jakub Kokoszka",email = "kuba.kokoszka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kopf (>=1.38.0,<2.0.0)",
    "kubernetes (>=34.1.0,<35.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
