[tool.poetry]
name = "workload-app"
version = "0.1.0"
description = "Simple workload generator for CPU, memory and I/O tests"
authors = ["Jakub Kokoszka"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
numpy = "^1.26.4"

[tool.poetry.scripts]
workload-app = "app:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

